2019-02-13  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (end_of_quarter): add function

2018-02-28  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-12

	* R/functions.R (nth_day): support 'n'
	of length > 1

2018-02-05  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-11

	* R/functions.R (timegrid): rename argument:
	    excludeWeekends  =>  exclude.weekends
	[ This is for consistency with other functions,
          such as PMwR::plot_trading_hours ]

	(nth_day): support period "year" and "week";
	'n' may be numeric

2018-01-26  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-10

	* R/functions.R (nth_day): unsorted
	'timestamps' get automatically sorted (instead
	of raising an error)

2018-01-16  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (nth_day): support numeric
	'period', which is interpreted as month

2018-01-05  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-9

2017-12-20  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (nth_day): fix computation when
	'period' is "quarter"; add period "halfyear"

2017-12-13  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (nth_day): add function

	* NAMESPACE: export 'nth_day'

	* man/nth_day.Rd: add file

2017-10-20  Enrico Schumann  <es@enricoschumann.net>

	* NAMESPACE: export month and year

2017-10-12  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (year, month): add functions

2017-10-11  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-8

	* man/timegrid.Rd: minor change in example to
	avoid error on Solaris (CRAN check)

2017-08-24  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-7

	* R/functions.R (last_weekday): support
	arguments 'before' and 'inclusive'

	* inst/unitTests/ut_datetime.R (test.last_weekday):
	add tests for last_weekday

2017-08-17  Enrico Schumann  <es@enricoschumann.net>
