@@ -81,6 +81,9 @@ nth_weekday(1, as.Date("2017-1-1"), 2) ## second Monday of Jan 2017
 
 dates <- seq(as.Date("2012-1-1"), as.Date("2013-4-15"), by = "day")
 nth_day(dates, period = "quarter", n = "first")
+nth_day(dates, period = c("Jan", "April"), n = "first")
+nth_day(dates, period = c("Jan", "April"), n = "last")
+nth_day(dates, period = c("Jan", "April"), n = c(2, 5))
 @ 
 \appendix
 <<results=tex>>=
